amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/is-not-input-type-directive-arguments.api.federation.report
ModelId: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/is-not-input-type-directive-arguments.api.graphql
Profile: GraphQL
Conforms: false
Number of results: 3

Level: Violation

- Constraint: http://a.ml/vocabularies/amf/parser#invalid-input-type
  Message: input_ must be an input type, Object1 it's not
  Severity: Violation
  Target: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/is-not-input-type-directive-arguments.api.graphql#/declares/testObjectArgument/shape/default-node
  Property: http://www.w3.org/ns/shacl#property
  Range: [(10,30)-(10,45)]
  Location: 

- Constraint: http://a.ml/vocabularies/amf/parser#invalid-input-type
  Message: input_ must be an input type, Interface it's not
  Severity: Violation
  Target: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/is-not-input-type-directive-arguments.api.graphql#/declares/testInterfaceArgument/shape/default-node
  Property: http://www.w3.org/ns/shacl#property
  Range: [(11,33)-(11,50)]
  Location: 

- Constraint: http://a.ml/vocabularies/amf/parser#invalid-input-type
  Message: input_ must be an input type, Union it's not
  Severity: Violation
  Target: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/is-not-input-type-directive-arguments.api.graphql#/declares/testUnionArgument/shape/default-node
  Property: http://www.w3.org/ns/shacl#property
  Range: [(12,29)-(12,42)]
  Location: 
